# css-module-lexer

./: Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: benchmark.yml  ci.yml
benches/: main.rs
examples/: cli.rs
src/: dependencies.rs  lexer.rs  lib.rs  postcss_modules.rs
tests/: integration_test.rs  test.rs
tests/postcss_modules/: extract_imports_test.rs  local_by_default_test.rs  mod.rs  scope_test.rs
tests/postcss_plugins/: mod.rs  modules_local_by_default_test.rs
