[package]
name = "css-module-lexer"
version = "0.0.1"
edition = "2021"
description = "Lexes CSS modules returning their dependencies metadata"
license = "MIT"

[dependencies]
smallvec = "1.13"

[dev-dependencies]
codspeed-criterion-compat = "2"
criterion = "0.5"
indoc = "2"

[[bench]]
name = "main"
harness = false
