[package]
name = "css-module-lexer"
version = "0.0.15"
edition = "2021"
description = "Lexes CSS modules returning their dependencies metadata"
license = "MIT"
repository = "https://github.com/ahabhgk/css-module-lexer"

[dependencies]
smallvec = "1.13"

[dev-dependencies]
codspeed-criterion-compat = "2"
criterion = "0.5"
indoc = "2"
linked-hash-map = "0.5"
similar-asserts = "1"

[[bench]]
name = "main"
harness = false
